--- a/style.css
+++ b/style.css
@@ -5,5 +5,6 @@
  * Author: Nate Conley
  * Author URI: http://nateconley.com
  * Version: 1.0.0
- * License: GNU General Public License v2 or Later
+ * License: GPL-2.0+
+ * License URI: http://www.gnu.org/licenses/gpl-2.0.txt
  */
