--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -47,7 +47,7 @@ nav {
 
 		span {
 			background: $color_white;
-			border-radius: 9px;
+			border-radius: 2px;
 			display: block;
 			height: 6px;
 			position: absolute;
@@ -65,7 +65,7 @@ nav {
 			}
 
 			&:nth-child(4) {
-				top: 28px;
+				top: 26px;
 			}
 		}
 
@@ -102,7 +102,7 @@ nav {
 		font-size: 2rem;
 		list-style: none;
 		margin: 0;
-		padding: 0 30px;
+		padding: 20px 30px;
 		position: absolute;
 		right: -30px;
 		text-align: center;
@@ -119,6 +119,7 @@ nav {
 
 		@include breakpoint(900px) {
 			font-size: 2.5rem;
+			padding: 30px 30px;
 			right: -60px;
 			top: 50px;
 		}
