--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -61,7 +61,6 @@
 
 			@include breakpoint(1000px) {
 				float: left;
-				margin-bottom: -2rem;
 				padding: 6rem 6rem 0 6rem;
 				width: 70%;
 			}
@@ -78,13 +77,25 @@
 		}
 	}
 
+	.read-more {
+		@include font-family('overpass');
+		color: $color_white;
+		display: block;
+		margin-top: 1rem;
+
+		&:hover {
+			border-bottom: 0.3 solid $color_light-gray;
+			color: #ccc;;
+		}
+	}
+
 	.links {
 		display: flex;
 		margin-bottom: -8px;
 		width: 100vw;
 
 		.media,
-		.writings {
+		.equipment {
 			cursor: pointer;
 			display: block;
 			position: relative;
@@ -145,28 +156,28 @@
 			z-index: 3;
 		}
 
-		.writings {
+		.equipment {
 			flex: 0.76947705;
 
 			h4 {
 				bottom: 0;
-				font-size: 1.75rem;
+				font-size: 1.4rem;
 				left: 5%;
 
 				@include breakpoint(440px) {
-					font-size: 2.25rem;
+					font-size: 1.9rem;
 				}
 
 				@include breakpoint(700px) {
-					font-size: 3.75rem;
+					font-size: 3rem;
 				}
 
 				@include breakpoint(1100px) {
-					font-size: 6rem;
+					font-size: 4.8rem;
 				}
 
 				@include breakpoint(1800px) {
-					font-size: 9rem;
+					font-size: 7.5rem;
 				}
 			}
 
