--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,8 +17,51 @@
 		}
 	}
 
-	.dates {
-		
+	.dates-section {
+
+		.side {
+
+			.date {
+				background: $color_dark-gray;
+				margin: 0.5rem 0;
+				margin-left: auto;
+				text-align: right;
+				width: 90%;
+
+				@include breakpoint(600px) {
+					text-align: center;
+					width: 80%;
+				}
+
+				@include breakpoint(1100px) {
+					width: 60%;
+				}
+
+				p {
+					padding: 0.5rem;
+				}
+
+				span {
+					color: #cecece;
+				}
+
+				a {
+					color: $color_white;
+				}
+			}
+			
+			.read-more {
+				color: $color_black;
+				padding-right: 2rem;
+				text-align: right;
+			}
+		}
+
+		.not-found {
+			background: $color_orange;
+			padding-right: 2rem;
+			text-align: right;
+		}
 	}
 
 	.photo-tiles {
@@ -29,6 +72,19 @@
 		img {
 			height: auto;
 			width: 100%;
+		}
+	}
+
+	.side {
+		font-size: 1.25rem;
+		line-height: 1.5;
+
+		@include breakpoint(700px) {
+			font-size: 1.5rem;
+		}
+
+		@include breakpoint(1200px) {
+			font-size: 2rem;
 		}
 	}
 
@@ -49,8 +105,6 @@
 		.side {
 			box-sizing: border-box;
 			color: $color_white;
-			font-size: 1.25rem;
-			line-height: 1.5;
 			padding: 0 2rem;
 
 			@include breakpoint(700px) {
